Added about page and fixed some bugs

--- a/src/pages/shared/Header/Header.css
+++ b/src/pages/shared/Header/Header.css
@@ -1,8 +1,7 @@
 a{
     color: black;
 }
-a.active{
-    color:blueviolet;
+#main-link a.active{
     font-weight: 700;
     text-decoration: underline;
 }
